Added alphamask.m and load_png.m
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@3 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 * text=auto !eol
 Clustering/mykmeans.m -text
 Filtering/lpf_comp.m -text
+Image[!!-~]Processing/alphamask.m -text
+Image[!!-~]Processing/load_png.m -text
