Added rotplot.m that allows plotting the orientation indicated by a rotation matrix.
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@5 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ Clustering/mykmeans.m -text
 Figures/maximize.m -text
 Filtering/lpf_comp.m -text
 Graphics/drawGaussian3.m -text
+Graphics/rotplot.m -text
 IMU[!!-~]Tools/plot_imu_data.m -text
 Image[!!-~]Processing/alphamask.m -text
 Image[!!-~]Processing/load_png.m -text
