Added Lines of code analysis tools
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@6 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 * text=auto !eol
 Clustering/mykmeans.m -text
 Figures/maximize.m -text
+File/sloc.m -text
+File/slocDir.m -text
 Filtering/lpf_comp.m -text
 Graphics/drawGaussian3.m -text
 Graphics/rotplot.m -text
