Added rank error function
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@8 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@ HMM/train_hmm_model.m -text
 IMU[!!-~]Tools/plot_imu_data.m -text
 Image[!!-~]Processing/alphamask.m -text
 Image[!!-~]Processing/load_png.m -text
+Learning/rank_error.m -text
 Quaternions/Quat2Vect.m -text
 Quaternions/QuatAvg.m -text
 Quaternions/QuatConj.m -text
