Renamed directory to Rotations and Euler angles
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@10 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,10 +17,12 @@ Image[!!-~]Processing/load_png.m -text
 Learning/rank_error.m -text
 PathPlanning/astar.m -text
 PathPlanning/meam620utils.jar -text
-Quaternions/Quat2Vect.m -text
-Quaternions/QuatAvg.m -text
-Quaternions/QuatConj.m -text
-Quaternions/QuatMul.m -text
-Quaternions/QuatToRot.m -text
-Quaternions/RotToQuat.m -text
-Quaternions/Vect2Quat.m -text
+Rotations/Quat2Vect.m -text
+Rotations/QuatAvg.m -text
+Rotations/QuatConj.m -text
+Rotations/QuatMul.m -text
+Rotations/QuatToRot.m -text
+Rotations/RPYtoRot_ZXY.m -text
+Rotations/RotToQuat.m -text
+Rotations/RotToRPY_ZXY.m -text
+Rotations/Vect2Quat.m -text
