git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@11 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -26,3 +26,5 @@ Rotations/RPYtoRot_ZXY.m -text
 Rotations/RotToQuat.m -text
 Rotations/RotToRPY_ZXY.m -text
 Rotations/Vect2Quat.m -text
+Rotations/hat_map.m -text
+Rotations/vee_map.m -text
