Reordered file tree to nest related functions
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@14 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,35 +1,33 @@
 * text=auto !eol
-Clustering/mykmeans.m -text
-Decision[!!-~]Trees/binary_entropy.m -text
-Decision[!!-~]Trees/calc_dt_error.m -text
-Decision[!!-~]Trees/dt_choose_feature.m -text
-Decision[!!-~]Trees/dt_choose_feature_multi.m -text
-Decision[!!-~]Trees/dt_train.m -text
-Decision[!!-~]Trees/dt_train_multi.m -text
-Decision[!!-~]Trees/dt_value.m -text
-Decision[!!-~]Trees/multi_entropy.m -text
+Figures/Graphics/drawGaussian3.m -text
+Figures/Graphics/plot_block.m -text
 Figures/maximize.m -text
 Figures/plotnumeric.m -text
 Figures/rotplot.m -text
-File/sloc.m -text
-File/slocDir.m -text
 Filtering/lpf_comp.m -text
-Graphics/drawGaussian3.m -text
-Graphics/plot_block.m -text
-HMM/forwardbackwardscaled.m -text
-HMM/guessHiddenStates.m -text
-HMM/train_hmm_model.m -text
 IMU[!!-~]Tools/plot_imu_data.m -text
 Image[!!-~]Processing/alphamask.m -text
 Image[!!-~]Processing/load_png.m -text
+Learning/Clustering/mykmeans.m -text
+Learning/Decision[!!-~]Trees/binary_entropy.m -text
+Learning/Decision[!!-~]Trees/calc_dt_error.m -text
+Learning/Decision[!!-~]Trees/dt_choose_feature.m -text
+Learning/Decision[!!-~]Trees/dt_choose_feature_multi.m -text
+Learning/Decision[!!-~]Trees/dt_train.m -text
+Learning/Decision[!!-~]Trees/dt_train_multi.m -text
+Learning/Decision[!!-~]Trees/dt_value.m -text
+Learning/Decision[!!-~]Trees/multi_entropy.m -text
+Learning/HMM/forwardbackwardscaled.m -text
+Learning/HMM/guessHiddenStates.m -text
+Learning/HMM/train_hmm_model.m -text
+Learning/Logistic[!!-~]Regression/lr_gradient.m -text
+Learning/Logistic[!!-~]Regression/lr_test.m -text
+Learning/Logistic[!!-~]Regression/lr_train.m -text
+Learning/Naive[!!-~]Bayes/nb_test.m -text
+Learning/Naive[!!-~]Bayes/nb_train.m -text
 Learning/confusion.m -text
 Learning/make_xval_partition.m -text
 Learning/rank_error.m -text
-Logistic[!!-~]Regression/lr_gradient.m -text
-Logistic[!!-~]Regression/lr_test.m -text
-Logistic[!!-~]Regression/lr_train.m -text
-Naive[!!-~]Bayes/nb_test.m -text
-Naive[!!-~]Bayes/nb_train.m -text
 Path[!!-~]Planning/astar.m -text
 Path[!!-~]Planning/meam620utils.jar -text
 Rotations/Quat2Vect.m -text
@@ -43,5 +41,7 @@ Rotations/RotToRPY_ZXY.m -text
 Rotations/Vect2Quat.m -text
 Rotations/hat_map.m -text
 Rotations/vee_map.m -text
-Text[!!-~]Output/sec2timestr.m -text
+Utils/File/sloc.m -text
+Utils/File/slocDir.m -text
+Utils/Text[!!-~]Output/sec2timestr.m -text
 Utils/propval.m -text
