Added SVM libraries (not built)
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@15 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -25,6 +25,23 @@ Learning/Logistic[!!-~]Regression/lr_test.m -text
 Learning/Logistic[!!-~]Regression/lr_train.m -text
 Learning/Naive[!!-~]Bayes/nb_test.m -text
 Learning/Naive[!!-~]Bayes/nb_train.m -text
+Learning/SVMs/kernel_gaussian.m -text
+Learning/SVMs/kernel_intersection.m -text
+Learning/SVMs/kernel_libsvm.m -text
+Learning/SVMs/kernel_poly.m -text
+Learning/SVMs/libsvm/COPYRIGHT -text
+Learning/SVMs/libsvm/Makefile -text
+Learning/SVMs/libsvm/README -text
+Learning/SVMs/libsvm/libsvmread.c -text
+Learning/SVMs/libsvm/libsvmwrite.c -text
+Learning/SVMs/libsvm/make -text
+Learning/SVMs/libsvm/make.m -text
+Learning/SVMs/libsvm/svm.cpp -text
+Learning/SVMs/libsvm/svm.h -text
+Learning/SVMs/libsvm/svm_model_matlab.c -text
+Learning/SVMs/libsvm/svm_model_matlab.h -text
+Learning/SVMs/libsvm/svmpredict.c -text
+Learning/SVMs/libsvm/svmtrain.c -text
 Learning/confusion.m -text
 Learning/make_xval_partition.m -text
 Learning/rank_error.m -text
@@ -43,5 +60,6 @@ Rotations/hat_map.m -text
 Rotations/vee_map.m -text
 Utils/File/sloc.m -text
 Utils/File/slocDir.m -text
-Utils/Text[!!-~]Output/sec2timestr.m -text
+Utils/String[!!-~]Functions/sec2timestr.m -text
+Utils/String[!!-~]Functions/strjoin.m -text
 Utils/propval.m -text
