Included pre-built x64 code. Takes more bit space but avoids compilation problems.
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@16 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -33,7 +33,13 @@ Learning/SVMs/libsvm/COPYRIGHT -text
 Learning/SVMs/libsvm/Makefile -text
 Learning/SVMs/libsvm/README -text
 Learning/SVMs/libsvm/libsvmread.c -text
+Learning/SVMs/libsvm/libsvmread.mexa64 -text
+Learning/SVMs/libsvm/libsvmread.mexglx -text
+Learning/SVMs/libsvm/libsvmread.mexmaci64 -text
 Learning/SVMs/libsvm/libsvmwrite.c -text
+Learning/SVMs/libsvm/libsvmwrite.mexa64 -text
+Learning/SVMs/libsvm/libsvmwrite.mexglx -text
+Learning/SVMs/libsvm/libsvmwrite.mexmaci64 -text
 Learning/SVMs/libsvm/make -text
 Learning/SVMs/libsvm/make.m -text
 Learning/SVMs/libsvm/svm.cpp -text
@@ -41,7 +47,16 @@ Learning/SVMs/libsvm/svm.h -text
 Learning/SVMs/libsvm/svm_model_matlab.c -text
 Learning/SVMs/libsvm/svm_model_matlab.h -text
 Learning/SVMs/libsvm/svmpredict.c -text
+Learning/SVMs/libsvm/svmpredict.mexa64 -text
+Learning/SVMs/libsvm/svmpredict.mexglx -text
+Learning/SVMs/libsvm/svmpredict.mexmaci64 -text
+Learning/SVMs/libsvm/svmpredict.mexw64 -text
 Learning/SVMs/libsvm/svmtrain.c -text
+Learning/SVMs/libsvm/svmtrain.mexa64 -text
+Learning/SVMs/libsvm/svmtrain.mexglx -text
+Learning/SVMs/libsvm/svmtrain.mexmaci64 -text
+Learning/SVMs/libsvm/svmtrain.mexw64 -text
+Learning/SVMs/libsvm/texput.log -text
 Learning/confusion.m -text
 Learning/make_xval_partition.m -text
 Learning/rank_error.m -text
