Added porterStemmer.m algorithm
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@17 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+Data[!!-~]Processing/porterStemmer.m -text
 Figures/Graphics/drawGaussian3.m -text
 Figures/Graphics/plot_block.m -text
 Figures/maximize.m -text
