Added Homogeneous rotations and translation
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@18 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -71,6 +71,10 @@ Rotations/QuatToRot.m -text
 Rotations/RPYtoRot_ZXY.m -text
 Rotations/RotToQuat.m -text
 Rotations/RotToRPY_ZXY.m -text
+Rotations/RotX.m -text
+Rotations/RotY.m -text
+Rotations/RotZ.m -text
+Rotations/Trans.m -text
 Rotations/Vect2Quat.m -text
 Rotations/hat_map.m -text
 Rotations/vee_map.m -text
