Added jpg load_jpg.m
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@20 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ Figures/rotplot.m -text
 Filtering/lpf_comp.m -text
 IMU[!!-~]Tools/plot_imu_data.m -text
 Image[!!-~]Processing/alphamask.m -text
+Image[!!-~]Processing/load_jpg.m -text
 Image[!!-~]Processing/load_png.m -text
 Learning/Clustering/mykmeans.m -text
 Learning/Decision[!!-~]Trees/binary_entropy.m -text
