--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 * text=auto !eol
 Data[!!-~]Processing/porterStemmer.m -text
 Figures/Graphics/drawGaussian3.m -text
+Figures/Graphics/draw_rot_rect.m -text
+Figures/Graphics/plot_arrow.m -text
 Figures/Graphics/plot_block.m -text
 Figures/maximize.m -text
 Figures/plotnumeric.m -text
