git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@26 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 Data[!!-~]Processing/porterStemmer.m -text
+Figures/Graphics/circle.m -text
 Figures/Graphics/drawGaussian3.m -text
 Figures/Graphics/draw_rot_rect.m -text
 Figures/Graphics/plot_arrow.m -text
