--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,11 @@ Data[!!-~]Processing/porterStemmer.m -text
 Figures/Graphics/circle.m -text
 Figures/Graphics/drawGaussian3.m -text
 Figures/Graphics/draw_rot_rect.m -text
+Figures/Graphics/pie_slice.m -text
 Figures/Graphics/plot_arrow.m -text
 Figures/Graphics/plot_block.m -text
+Figures/Graphics/plot_circle.m -text
+Figures/Graphics/plot_pieslice.m -text
 Figures/maximize.m -text
 Figures/plotnumeric.m -text
 Figures/rotplot.m -text
