Function to bound a value to fixed range
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@29 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -94,3 +94,4 @@ Utils/File/slocDir.m -text
 Utils/String[!!-~]Functions/sec2timestr.m -text
 Utils/String[!!-~]Functions/strjoin.m -text
 Utils/propval.m -text
+Utils/range_limit.m -text
