Added GetFullPath.c and compiled mex
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@31 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -99,6 +99,8 @@ Rotations/Trans.m -text
 Rotations/Vect2Quat.m -text
 Rotations/hat_map.m -text
 Rotations/vee_map.m -text
+Utils/File/GetFullPath.c -text
+Utils/File/GetFullPath.mexw64 -text
 Utils/File/sloc.m -text
 Utils/File/slocDir.m -text
 Utils/String[!!-~]Functions/sec2timestr.m -text
