Added triangle patch drawing
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@32 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ Figures/ErrorImages/error6.jpg -text
 Figures/Graphics/circle.m -text
 Figures/Graphics/drawGaussian3.m -text
 Figures/Graphics/draw_rot_rect.m -text
+Figures/Graphics/draw_rot_tri.m -text
 Figures/Graphics/pie_slice.m -text
 Figures/Graphics/plot_arrow.m -text
 Figures/Graphics/plot_block.m -text
