git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@34 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -107,5 +107,6 @@ Utils/File/sloc.m -text
 Utils/File/slocDir.m -text
 Utils/String[!!-~]Functions/sec2timestr.m -text
 Utils/String[!!-~]Functions/strjoin.m -text
+Utils/datetimestring.m -text
 Utils/propval.m -text
 Utils/range_limit.m -text
