--- a/.gitattributes
+++ b/.gitattributes
@@ -84,6 +84,7 @@ Learning/confusion.m -text
 Learning/make_xval_partition.m -text
 Learning/rank_error.m -text
 Math/gauss2d.m -text
+Math/pseudo_inv.m -text
 Path[!!-~]Planning/astar.m -text
 Path[!!-~]Planning/meam620utils.jar -text
 Rotations/HTInv.m -text
