Added edge plotting tool for graphs
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@38 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ Figures/fill_container.m -text
 Figures/fit_container.m -text
 Figures/hide_tick_labels.m -text
 Figures/maximize.m -text
+Figures/plot_edges.m -text
 Figures/plot_hough_results.m -text
 Figures/plotnumeric.m -text
 Figures/rotplot.m -text
