git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@39 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -94,6 +94,7 @@ Learning/rank_error.m -text
 Math/dtor.m -text
 Math/gauss2d.m -text
 Math/iseven.m -text
+Math/isinrect.m -text
 Math/isodd.m -text
 Math/pseudo_inv.m -text
 Math/rtod.m -text
