Refactored Kinect functions into libs
git-svn-id: https://technomicron/svn/MATLAB%20Libs/trunk@41 4facdc8d-61e3-400b-aae7-3533e0e84666

--- a/.gitattributes
+++ b/.gitattributes
@@ -39,6 +39,19 @@ Image[!!-~]Processing/load_png.m -text
 Image[!!-~]Processing/ring_mask.m -text
 Image[!!-~]Processing/transform_centered_peaks.m -text
 Image[!!-~]Processing/windowed_rect_hough.m -text
+Kinect/GetUnixTime.cc -text
+Kinect/GetUnixTime.mexa64 -text
+Kinect/GetUnixTime.mexglx -text
+Kinect/GetUnixTime.mexmaci64 -text
+Kinect/depth_to_point_cloud.m -text
+Kinect/displayKinectDepth.m -text
+Kinect/djpeg.cpp -text
+Kinect/djpeg.mexa64 -text
+Kinect/unpackKinectDepth.m -text
+Kinect/viewKinect2.m -text
+Kinect/viewKinect3.m -text
+Kinect/zlibUncompress.cc -text
+Kinect/zlibUncompress.mexa64 -text
 Learning/Clustering/mykmeans.m -text
 Learning/Decision[!!-~]Trees/binary_entropy.m -text
 Learning/Decision[!!-~]Trees/calc_dt_error.m -text
